# ROSA

./: .gitignore  404.html  LICENSE  OLDparams.json.old  README.md  ROSA-installer.py  ROSA.py  SECURITY.md  UAC-ROSA-installer.py  WIN_ROSA-installer.py  _config.yml  bin_README.md  blue.txt  foreign_potato_master.py  gpio.ini  gpio.json  index.html  main.py  print_responses.md  pyinstaller_command.txt  pyproject.toml  qol_mth.py  rosa_gui_installer.ahk  rosa_gui_installer.py  shell_module_sounds.py  template_index.html
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml
_includes/: default.html
css/: cayman.css
docs/: BUILDING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  SECURITY.md  STRUCTURE.md  TODO.md  TREE.txt  builds.bat  builds.sh  requirements.txt  win_requirements.txt
docs/ico/: title.txt
ico/: html_code.html  site.webmanifest
src/ROSA/: ROSA.py  __init__.py  __main__.py  config.py  foreign_potato_master.py  gpio.json  main.py
src/ROSA-installer/: UAC-ROSA-installer.py  WIN_ROSA-installer.py
src/ROSA_installer/: ROSA_installer_gui.py  ROSA_installer_uac.py
src/rosa/: __init__.py  __main__.py  config.py  duck_typed_microphone.py  foreign_potato_master.py  gpio.json  main.py
src/rosa/responses/: responses.md
stylesheets/: stylesheet.css
testAssers/: DO NOT RUN - fn testing.py  dox.txt
tests/: __init__.py  classwizard.py  soundcloud.tmp  test_dir.bat  test_ini.py
