[tool.poetry]
name = "rosa"
version = "0.8.0"
description = "ROBOTICALLY OBNOXIOUS SERVING ASSISTANT - An emotional smart assistant that doesn't listen to you"
authors = ["Cornelius-Figgle <max@fullimage.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
SpeechRecognition = "^3.10.0"
pygame = "^2.4.0"
PyAudio = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
