[tool.poetry]
name = "rosa"
version = "0.7.1"
description = "ROBOTICALLY OBNOXIOUS SERVING ASSISTANT - an emotional voice assistant that doesn't listen to you"
authors = ["Cornelius-Figgle <max@fullimage.net>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
SpeechRecognition = "^3.10.0"
PyAudio = "^0.2.13"
pygame = "^2.5.0"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple/"
priority = "default"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
